first try custom control

--- a/TestApp/TestApp/MainPage.xaml
+++ b/TestApp/TestApp/MainPage.xaml
@@ -9,11 +9,12 @@
             <Color x:Key="primary">#3ec3d5</Color>
         </ResourceDictionary>
     </ContentPage.Resources>
-    <StackLayout>
-      
+    <StackLayout BackgroundColor="Brown" >
+       
             <customControl:ImageEntry TextColor="White" 
                         PlaceholderColor="{StaticResource primary}" 
                         Image="user" 
+                        ImageAlignment="Left"
                         Placeholder="Email" 
                         HorizontalOptions="FillAndExpand"/>            
        
